--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,83 @@
-# General
-*.DS_Store
+# Python specific
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+.python-version
+
+# AWS specific
+*/.aws-sam
+.aws-sam/
+*/.aws/
+.aws/
+samconfig.toml
+
+# Environment variables
+.env
+.venv
+venv/
+ENV/
+.env.local
+.env.*.local
+
+# IDE specific
+.idea/
+.vscode/
+*.swp
+*.swo
+.project
+.classpath
+.settings/
+
+# OS specific
+.DS_Store
 .AppleDouble
 .LSOverride
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# Icon must end with two \r
-Icon
+# Logs and databases
+*.log
+*.sqlite
+*.db
 
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
 
-# Thumbnails
-._*
+# Build output
+dist/
+build/
+out/
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
+# Coverage reports
+coverage/
+.coverage
+htmlcov/
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-*/.aws-sam
-*/.python-version
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
